# telecom

./: .clang-format  CMakeLists.txt  README.md  main.cpp
assets/: system.db
src/core/: CMakeLists.txt  assetsmanager.cpp  assetsmanager.h  countryloader.h  dbcountryloader.cpp  dbcountryloader.h  entities.h  idataloader.h  loaderfactory.h
src/core/db/: databasemanager.cpp  databasemanager.h  idatabaseworker.cpp  idatabaseworker.h  liteworker.cpp  liteworker.h  types.h
src/core/tests/: CMakeLists.txt  assetsmanagertest.cpp  dbcountryloadertest.cpp  main.cpp
src/core/tests/mock/: databaseworkermock.h  mockresources.qrc
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobileoperatorsmodel.cpp  mobileoperatorsmodel.h  mobileoperatorswidget.cpp  mobileoperatorswidget.h  resources.qrc
src/gui/styles/: styleloader.cpp  styleloader.h
src/gui/styles/assets/: CMakeLists.txt
src/gui/styles/base/: basestyle.qss
